fix connect text align error

--- a/src/app/components/WelcomeComponents/Connect/styles.css
+++ b/src/app/components/WelcomeComponents/Connect/styles.css
@@ -95,6 +95,7 @@
   .connectSubTitle{
     /*left: 40px;*/
     font-size:30px;
+    left: 1.6em;
   }
   .connectIcon{
     font-size:40px;
